--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/firebase": "^5.0.7",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "@nuxtjs/vuetify": "^1.11.0",
+    "@nuxtjs/vuetify": "^1.0.0",
     "cookieparser": "^0.1.0",
     "core-js": "2",
     "firebase": "7.13.2",
@@ -26,6 +26,9 @@
     "jwt-decode": "^2.2.0",
     "nuxt": "^2.12.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@nuxtjs/vuetify": "^1.0.0",
+    "firebase-functions-test": "^0.1.6"
+  },
   "private": true
 }
