--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "cd src && nuxt build && cd ..",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "clean": "mkdir -p public && rm -rf ./public/*",
-    "cp:static": "cp -R ./functions/nuxt/dist/client/* ./public && cp -R ./functions/nuxt/dist/server/* ./public && cp -R ./functions/nuxt/dist/* ./public && cp -R ./src/static/* ./public",
+    "clean": "mkdir -p public && rm -rf ./public/* && mkdir -p public/assets",
+    "cp:static": "cp -R ./functions/nuxt/dist/client/* ./public/assets && cp -R ./src/static/* ./public",
     "setup": "yarn clean && yarn cp:static",
-    "serve": "yarn setup && firebase serve --only hosting,functions",
+    "serve":   "yarn setup && DEBUG=nuxt:* firebase serve --only hosting,functions",
     "deploy": "yarn setup && firebase deploy"
   },
   "dependencies": {
